# python_call_c

./: CMakeLists.txt  c_mat_mul.py  c_mat_mul_demo.py
include/: c_mat_mul.h
src/: c_mat_mul.c
